  o More fixes to MP3 tag reading.  Sometimes tags were
    detected as valid MP3 frames.
  o Fix to stop, avoiding a crash, when starting of effects fails.
    (Reuben Thomas)
  o Fixed a bug introduced in 12.18.2 that stopped the draining
    of effects from occuring.  This had stopped the reverse effect,
    among others, from working.  (Reuben Thomas)
  o Fix rounding error when reading command-line time
    parameters. (robs)
  o Fix nul file hander ignoring other format options if rate
    option has not been given. (robs)
  o Fix synth length accuracy. (robs)
  o Fix broken audio when downmixing with any of the following
    effects: synth, deemph, vibro. (robs)
  o Fixed deemph & earwax effects to work with MP3, vorbis,
    & FLAC.  (robs)
  o Fix wav file handler discarding the last PCM sample in certain
    circumstances. (robs)
  o Fix [1627972] AIFF read bug when MARK chunk present.  (Richard Fuller)
  o Fix [1160154] VOX to WAV conversion problem.  (robs)
  o Removed (for output file only) the potentially
    problematic -v option.  Use the vol effect instead.  (robs)
  o Improved the accuracy of integer and floating point PCM
    conversions.  (robs)
  o Don't go into a loop on zero-padded WAVs.  (Jorge Serna)
  o Fix to AIFF writing to avoid writing invalid files in some situations.
    (Reuben Thomas)

  Internal improvements:

  o More and better self-tests. (robs@users.sf.net)
  o Build system overhaul to use the full set of GNU autotools.
    (Reuben Thomas)
  o Add new getopt1.c to win32 project file.
  o Remove old, optional rate change and alaw/ulaw conversion code.
    (Reuben Thomas)
  o Removed the old internally invoked (but mentioned in the man page)
    copy effect.  (robs)

sox-12.18.2
-----------
  o Adding in Debian's disk full fix (#313206).
  o Finally got rid of reference to cleanup() function in
    library.  Applications are now required to detect
    all failures from return codes and cleanup as they
    want.