@@ -91,6 +91,9 @@ sox-12.18.3
   o Fixed a bug introduced in 12.18.2 that stopped the draining
     of effects from occuring.  This had stopped the reverse effect,
     among others, from working.  (Reuben Thomas)
+  o Several effects are now optimised out in situations where they need
+    do nothing, e.g. changing rate from 8000 to 8000, or changing volume
+    by 0dB [Bug# 1395781].  (robs)
   o Fix rounding error when reading command-line time
     parameters. (robs)
   o Fix nul file hander ignoring other format options if rate
